--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "relsize.doc.tar.xz": 4a087c1122cb1096dcc0c4376c81ff87e4f22829
-  "relsize.tar.xz": d85dc9e34c084e1ac6b8d0439df3ce7930e06061
+  relsize.doc.tar.xz: 363ef7b67105b6142d5b740e2f21fb386a02b5b0
+  relsize.tar.xz: e10983fc04875199048c7c76718f0df7978b7ff5
